# file_processor

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
src/: lib.rs
